--- a/Travio_ZT/Travio/Info.plist
+++ b/Travio_ZT/Travio/Info.plist
@@ -5,6 +5,7 @@
 	<key>UIAppFonts</key>
 	<array>
 		<string>Poppins-Regular.ttf</string>
+		<string>Poppins-Thin.ttf</string>
 		<string>Poppins-SemiBold.ttf</string>
 		<string>Poppins-Bold.ttf</string>
 		<string>Poppins-Light.ttf</string>
